[metadata]
name = task-core
summary = task core
description-file =
    README.rst
author = Alex Schultz
author-email = aschultz@next-development.com
home-page = https://github.com/mwhahaha/task-core
python-requires = >=3.6
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities

[files]
packages =
    task_core

data_files =
    share/task-core/services = services/*

[entry_points]
console_scripts =
    task-core = task_core.cmd:main
