[metadata]
name = task-core
summary = task core
description_file =
    README.rst
long_description_content_type = text/x-rst
author = Alex Schultz
author_email = aschultz@next-development.com
home_page = https://github.com/mwhahaha/task-core
python_requires = >=3.6
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities

[files]
packages =
    task_core

data_files =
    share/task-core/examples = examples/*
    share/task-core/schema = schema/*

[entry_points]
console_scripts =
    task-core = task_core.cmd:main
    task-core-example = task_core.cmd:example

task_core.task.types =
    service = task_core.tasks:ServiceTask
    directord = task_core.tasks:DirectordTask
    print = task_core.tasks:PrintTask
    ansible_runner = task_core.tasks:AnsibleRunnerTask
